# duckdb_mysql_scanner

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  mysql_scanner.cpp
.github/workflows/: Linux.yml
duckdb-ext/: Cargo.toml
duckdb-ext/src/: table_function.rs
duckdb-extension-framework/: Cargo.toml  build.rs
duckdb-extension-framework/src/: constants.rs  data_chunk.rs  lib.rs  logical_type.rs  vector.rs  wrapper.cpp  wrapper.hpp
duckdb-extension-framework/src/table_functions/: init_info.rs  table_function.rs
extension/include/: connection_pool.hpp  mysql_connection_manager.hpp  mysql_scanner_extension.hpp  mysqlscanner_extension.hpp  paged_mysql_state.hpp
extension/src/: CMakeLists.txt  mysql_scanner_extension.cpp  mysqlscanner_extension.cpp
extension/src/duckdb_function/: CMakeLists.txt  mysql_attach.cpp  mysql_scan.cpp
extension/src/model/: CMakeLists.txt  attach_function_data.cpp  mysql_bind_data.hpp
extension/src/state/: CMakeLists.txt  mysql_global_state.hpp  mysql_local_state.hpp
extension/src/transformer/: CMakeLists.txt  duckdb_to_mysql_request.cpp  mysql_to_duckdb_result.cpp
extension/src/util/: CMakeLists.txt  connection_pool.cpp  mysql_connection_manager.cpp  mysql_connector.cpp  pool_entry.cpp  synchronous_queue.cpp
src/: CMakeLists.txt  error.rs  extension.c  lib.rs  mysql.rs  mysql_scanner_extension.cpp  table_function.rs  types.rs
src/duckdb_function/: mysql_scan.cpp
src/function/: mod.rs
src/function/mysql_scan/: mod.rs  mysql_scan_bind.rs  mysql_scan_global_init.rs  mysql_scan_local_init.rs  mysql_scan_read.rs  table_function_builder.rs
src/include/: mysql_scanner_extension.hpp
src/model/: CMakeLists.txt  attach_function_data.rs  duckdb_type.rs  extension_global_state.rs  mod.rs  mysql_bind_data.hpp  mysql_bind_data.rs  mysql_global_state.rs  mysql_local_state.rs
src/state/: mysql_global_state.hpp  mysql_local_state.hpp
src/transformer/: CMakeLists.txt  duckdb_to_mysql_request.rs  mod.rs  mysql_to_duckdb_result.cpp  mysql_to_duckdb_result.rs
src/util/: concurrent_bag.cpp
