[package]
name = "rs-duckdb-mysql-scanner"
version = "0.1.0"
edition = "2021"
description = "Purely experimental DuckDB extension framework"
license-file = "LICENSE"
documentation = "https://github.com/Kayrnt/duckdb_mysql_scanner"
homepage = "https://github.com/Kayrnt/duckdb_mysql_scanner"
repository = "https://github.com/Kayrnt/duckdb_mysql_scanner"

[dependencies]
mysql = "24.0.0"
duckdb-extension-framework = { path = "./duckdb-extension-framework" }
lazy_static = "1.4.0"
futures = "0.3"

[lib]
name = "rs_duckdb_mysql_scanner"
crate-type = ["staticlib"]
